# tcMenu

./: .gitignore  .gitmodules  LICENCES.md  README.md  pom.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_linux.yml  build_mac.yml  build_windows.yml  test.yml
CoreXmlPlugins/: readme.md  tcmenu-plugin-item.xsd
CoreXmlPlugins/core-display/: adaArduinoSimpleBuilder.xml  adaGfxDisplay.xml  adaMbedOled.xml  analogJoystickInput.xml  customDisplay.xml  dfRobotJoystick.xml  dfRobotLcd.xml  i2cLiquidCrystalDisplay.xml  liquidCrystalDisplay.xml  noDisplay.xml  noInput.xml  rotaryEncoderInput.xml  ssd1306asciiDisplay.xml  tcmenu-plugin.xml  u8g2Display.xml  u8g2SimpleBuilder.xml  upDownSwitchesInput.xml
CoreXmlPlugins/core-remote/: noRemote.xml  remoteEthernet.xml  remoteMbedEthernet.xml  remoteSerialESP.xml  remoteWifiESP.xml  simhubConnector.xml  tcmenu-plugin.xml
CoreXmlPlugins/examples/: example-plugin-item.xml  example-plugin.xml
api/tcMenuJavaApi/: pom.xml
archive/: README.md
archive/tcMenuGenerator/: pom.xml
archive/xmlPlugins/: tcmenu-plugin-item.xsd  tcmenu-plugin.xsd
baseInputDisplayPlugin/: pom.xml
baseInputDisplayPlugin/arduino/: README.txt  library.properties
dfRobotCodePlugin/: pom.xml
dfRobotCodePlugin/arduino/: README.txt
embedCONTROLCore/: README.md  pom.xml
embedCONTROLFx/: README.md  deployment-instructions.md  embedControlInstaller.iss  pom.xml
embedded/: pom.xml
embedded/tcMenu/: BaseRenderers.cpp  BaseRenderers.h  EthernetTransport.cpp  EthernetTransport.h  MenuItems.cpp  MenuItems.h  MessageProcessors.cpp  MessageProcessors.h  RemoteConnector.cpp  RemoteConnector.h  RemoteTypes.h  SerialTransport.cpp  SerialTransport.h  UDPEthernetTransport.cpp  UDPEthernetTransport.h  keywords.txt  library.properties  tcMenu.cpp  tcMenu.h  tcMenuAdaFruitGfx.cpp  tcMenuLiquidCrystal.cpp  tcMenuLiquidCrystal.h
embedded/tcMenuAdaFruitGfx/: library.properties  tcMenuAdaFruitGfx.cpp  tcMenuAdaFruitGfx.h
embedded/tcMenuAdaGfx/: library.properties  tcMenuAdaFruitGfx.cpp  tcMenuAdaFruitGfx.h
embeddedJavaExample/: README.md  embeddedJavaExample.emf  pom.xml
embeddedJavaExample/data/: README.md  auth.properties  menuStorage.properties
font-bmp-editor/: pom.xml
font-bmp-editor/scripts/: packaging-bitmap-font-editor.md
tcMenuCodePluginApi/: pom.xml
tcMenuExampleUI/: README.md  designerscript.iss  pom.xml
tcMenuGenerator/: README.md  designerscript.iss  install_linux.sh  packager-all-platforms.md  packager-all-platforms.txt  packager-win.txt  pom.xml  run-on-linux.md  startDesigner.sh
tcMenuGenerator/scripts/: buildTcMenuWin.cmd  designerscript.iss  i18n-readme.md  packager-all-platforms.md  tcmenu-java-local-dev.md  tcmenudev  tcmenudev.bat
tcMenuJavaApi/: pom.xml
tcMenuNative/: CMakeLists.txt  FreeFontHandler.cpp  FreeFontHandler.h  README.md  freetyped.lib  library.cpp  library.h
tcMenuNative/fontTest/: CMakeLists.txt  main.cpp
tcMenuNative/packaged/mac/: libtcMenuNative.dylib  macos.md
tcMenuNative/packaged/mac_amd64/: libtcMenuNative.dylib
tcMenuNative/packaged/win/: freetype.lib  tcMenuNative.lib  windows.md
web-designer/: LICENSE.txt  pom.xml
web-designer/tcmenu-code-generator/: pom.xml
web-designer/tcmenu-web-generator/: pom.xml
web-designer/tcmenu-xml-plugins/: tcmenu-plugin.xsd
web-designer/tcmenugen/: package-lock.json  package.json
xmlPlugins/: README.md  tcmenu-plugin-item.xsd
xmlPlugins/core-display/: ArduinoTouchLibraryIntegration.xml  EmbeddedJFX.xml  adaArduinoSimpleBuilder.xml  adaGfxDisplay.xml  adaMbedOled.xml  adafruitTrueCpp.xml  analogJoystickInput.xml  analogResistiveTouchScreen.xml  customDisplay.xml  customDrawable.xml  dfRobotJoystick.xml  dfRobotLcd.xml  esp32TouchSensor.xml  i2cLiquidCrystalDisplay.xml  liquidCrystalDisplay.xml  matrixKeyboard.xml  noDisplay.xml  noInput.xml  oneButtonSwitchesInput.xml  rotaryEncoderInput.xml  ssd1306asciiDisplay.xml  ssd1306asciiDisplayQuickStart.xml  stm32BspFrameBuffer.xml  tcmenu-plugin.xml  tftSpiDisplay.xml  twoButtonSwitchesInput.xml  u8g2Display.xml  (+2 more)
zMedia/: tcmenu-i18n.py  tcmenu-java-local-dev.md
(+1900 files in other folders)
